apps/nginx-demo/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo
spec:
  rules:
    - host: dev-demo.192.168.250.215.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-demo
                port:
                  number: 80
  tls:
    - hosts:
        - dev-demo.192.168.250.215.nip.io
      secretName: dev-demo-tls
